--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2b84b8d9",
+   "id": "a2408e76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2ee9c637",
+   "id": "475d4ed4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "66134f14",
+   "id": "342f216e",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "36b4e65a",
+   "id": "17719485",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8e34ba7a",
+   "id": "61487249",
    "metadata": {},
    "outputs": [
     {
@@ -13931,7 +13931,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b80b0c02",
+   "id": "45b7049e",
    "metadata": {},
    "outputs": [
     {
@@ -13954,7 +13954,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "efd70777",
+   "id": "97c22733",
    "metadata": {},
    "outputs": [
     {
@@ -27638,7 +27638,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7f248294",
+   "id": "15762202",
    "metadata": {},
    "outputs": [
     {
@@ -27661,7 +27661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce87bb9a",
+   "id": "e2f7aeef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27694,7 +27694,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "82ce8d99",
+   "id": "9578133c",
    "metadata": {},
    "outputs": [
     {
@@ -28090,7 +28090,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "2e59f92a",
+   "id": "b09ca246",
    "metadata": {},
    "outputs": [
     {
@@ -28119,8 +28119,190 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "id": "73955615",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Box(2,)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.action_space."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "f7184fd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isinstance(env.action_space, gym.spaces.Discrete)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "d137aa9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env_cartpole = gym.make('CartPole-v0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "8049e7c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isinstance(env_cartpole.action_space, gym.spaces.Discrete)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "d0937bdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env_cartpole.action_space.sample()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0b1eb9bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "57b2ce8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_val = torch.rand((16,4))\n",
+    "q_val_t = torch.rand((16,4)).numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8107938f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 1. 0.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [1. 1. 1. 0.]\n",
+      " [0. 1. 0. 1.]\n",
+      " [1. 1. 0. 0.]\n",
+      " [1. 1. 0. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [1. 0. 1. 0.]\n",
+      " [0. 1. 0. 1.]\n",
+      " [1. 0. 1. 0.]\n",
+      " [1. 0. 1. 1.]\n",
+      " [1. 1. 1. 1.]\n",
+      " [0. 0. 0. 1.]\n",
+      " [1. 1. 0. 1.]\n",
+      " [0. 0. 0. 0.]\n",
+      " [0. 0. 1. 1.]] [[0.96809524 0.7895485  0.33884293 0.00510299]\n",
+      " [0.00650108 0.37669843 0.3940693  0.1802519 ]\n",
+      " [0.6120249  0.90480304 0.52996695 0.37387037]\n",
+      " [0.09325176 0.34006244 0.8736778  0.79781777]\n",
+      " [0.58266664 0.953933   0.7011961  0.4675414 ]\n",
+      " [0.78596795 0.19914281 0.8430013  0.68115824]\n",
+      " [0.74407375 0.714432   0.8011907  0.8422265 ]\n",
+      " [0.36661494 0.4926452  0.20888394 0.9808157 ]\n",
+      " [0.03008723 0.980459   0.65609753 0.70221484]\n",
+      " [0.31855512 0.6127796  0.760149   0.22079694]\n",
+      " [0.23475575 0.09890693 0.0838989  0.42424667]\n",
+      " [0.67368764 0.3037945  0.35070103 0.52888715]\n",
+      " [0.3644002  0.34216774 0.090639   0.07894695]\n",
+      " [0.9170016  0.4587865  0.4489963  0.40373904]\n",
+      " [0.02350414 0.6376571  0.68243796 0.25016963]\n",
+      " [0.5933353  0.26328605 0.61650836 0.55752605]]\n",
+      "[[0.         0.7895485  0.         0.00510299]\n",
+      " [0.00650108 0.37669843 0.3940693  0.1802519 ]\n",
+      " [0.         0.         0.         0.37387037]\n",
+      " [0.09325176 0.         0.8736778  0.        ]\n",
+      " [0.         0.         0.7011961  0.4675414 ]\n",
+      " [0.         0.         0.8430013  0.        ]\n",
+      " [0.         0.         0.         0.        ]\n",
+      " [0.         0.4926452  0.         0.9808157 ]\n",
+      " [0.03008723 0.         0.65609753 0.        ]\n",
+      " [0.         0.6127796  0.         0.22079694]\n",
+      " [0.         0.09890693 0.         0.        ]\n",
+      " [0.         0.         0.         0.        ]\n",
+      " [0.3644002  0.34216774 0.090639   0.        ]\n",
+      " [0.         0.         0.4489963  0.        ]\n",
+      " [0.02350414 0.6376571  0.68243796 0.25016963]\n",
+      " [0.5933353  0.26328605 0.         0.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "q_val = torch.round(q_val).numpy()\n",
+    "print(q_val, q_val_t)\n",
+    "print(q_val_t*np.logical_not(q_val))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a5512d64",
+   "id": "15061f88",
    "metadata": {},
    "outputs": [],
    "source": []
